deploy/PROD/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal-paciente
  annotations:
    field.cattle.io/projectId: c-bjkxv:p-tfv75
